# yubikey-evm-signer

./: .gitignore  .justfile  .taplo.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: cron-zizmor.yml  docs.yml  lint.yml  pages.yml  release.yml  security.yml  unit.yml  zizmor.yml
crates/signer-core/: Cargo.toml
crates/signer-core/examples/: yubikey-cli.rs
crates/signer-core/src/: address.rs  crypto.rs  eip712.rs  error.rs  lib.rs  signature.rs  transaction.rs
crates/signer-core/src/yubikey/: apdu.rs  mod.rs  pcsc_transport.rs  piv.rs  slot.rs
crates/signer-core/tests/: eip7951_vectors.rs
crates/signer-wasm/: Cargo.toml
crates/signer-wasm/src/: device.rs  error.rs  lib.rs  transport.rs
demo/: app.js  index.html  styles.css
