[workspace]
members = ["crates/signer-core", "crates/signer-wasm"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Jose Storopoli<jose@storopoli.com>"]
description = "YubiKey EVM Signer"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/storopoli/yubikey-evm-signer"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "evm", "yubikey", "secp256r1"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"
clippy.missing_const_for_fn = "warn"

[workspace.dependencies]
# Crypto (RustCrypto)
ecdsa = "0.16.9"
p256 = "0.13.2"
sha3 = "0.10.8"

# Ethereum (Alloy)
alloy-primitives = { version = "1.5.2", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.12", features = ["derive"] }

# WASM
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"

# Utils
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
