[package]
name = "yubikey-evm-signer-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "YubiKey EVM Signer Core Cryptography Library"
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
