[package]
name = "yubikey-evm-signer-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "YubiKey EVM Signer Core Cryptography Library"
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
# Crypto
p256 = { workspace = true, features = ["ecdsa"] }

# Ethereum
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# Utils
thiserror.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
