[package]
name = "yubikey-evm-signer-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "YubiKey EVM Signer Core Cryptography Library"
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = []
pcsc = ["dep:pcsc", "dep:des"]

[[example]]
name = "yubikey-cli"
required-features = ["pcsc"]

[dependencies]
# Crypto
des = { version = "0.8.1", optional = true }
p256 = { workspace = true, features = ["ecdsa"] }

# Ethereum
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# Utils
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Optional: PC/SC for native YubiKey access
pcsc = { version = "2.9.0", optional = true }
