[package]
name = "yubikey-evm-signer-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "YubiKey EVM Signer WASM Cryptography Library"
license.workspace = true
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library
yubikey-evm-signer-core = { path = "../signer-core" }

# Crypto
p256 = { workspace = true, features = ["ecdsa"] }

# WASM
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Navigator",
    "Usb",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "UsbConfiguration",
    "UsbInterface",
    "UsbAlternateInterface",
    "UsbEndpoint",
    "UsbEndpointType",
    "UsbDirection",
    "UsbTransferStatus",
    "UsbInTransferResult",
    "UsbOutTransferResult",
] }

# Utils
serde_json.workspace = true
hex.workspace = true

# Ethereum
alloy-primitives.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
